# open-vocab-vision-ros

./: .gitignore  CMakeLists.txt  README.md  gd_requirements.txt  package.xml  requirements.txt  setup.py
launch/: grounding_dino.launch  grounding_dino_indoor.launch  grounding_dino_outdoor.launch  lang_seg_ros.launch  lang_seg_ros_indoor.launch  lang_seg_ros_outdoor.launch  sim_vision.launch  vision.launch  vision_indoor.launch  vlm_infer.launch  vlm_infer_sim.launch  wp_24_vision.launch  yolo.launch  yolo_indoor.launch  yolo_outdoor.launch  yolo_outdoor_sim.launch
msg/: Detection.msg  Track.msg
scripts/: grounding_dino_infer_node.py  infer.py  lseg_infer.py  tracker.py  tracker_node.py  viz_detections.py  vlm_infer.py  yolo_infer.py  yolo_infer_node.py
src/lang_seg_ros/: ros_utils.py  tracker.py  viz_utils.py
src/open_vocab_vision_ros/: detection_node.py  grounding_dino.py  ros_utils.py  tracker.py  viz_utils.py
src/open_vocab_vision_ros/vlm/: vlm.py
srv/: GetLabels.srv  Query.srv  SetLabels.srv
