<?xml version="1.0"?>
<package format="2">
  <name>lang_seg_ros</name>
  <version>0.0.0</version>
  <description>The lang_seg_ros package</description>
  <maintainer email="zacravi@seas.upenn.edu">zacravi</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
