<?xml version="1.0"?>
<package format="2">
  <name>open_vocab_vision_ros</name>
  <version>0.0.0</version>
  <description>The open_vocab_vision_ros package</description>
  <maintainer email="zacravi@seas.upenn.edu">zacravi</maintainer>
  <license>TODO</license>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <export></export>
</package>
